
    also to do with this.

    TODO: check if current version 2.6.3 does work

  * config/initializes/rails_admin.rb

    this file does not exist in the external repo

    rails_admin tries to load all ruby files as models, for some reason (even the controllers)
    so make sure to explicitly include all allowed models via config.included_models

  * add assets rails_admin/rails_admin.js and rails_admin/rails_admin.css to the assets compilation pipeline

    see config/initializers/assets.rb
    that file already existed, so may conflict in the future.

- ugent/cron.d/roadmap.cron

  cronjob that is moved to /etc/cron.d/roadmap in the rpm

  internally used cronjobs are:

  * ugent/bin/daily_export_projects:

    * for every managed Org creates "<year>/<month>/projects_<timestamp>.json" in /opt/dmponline_internal/<org.abbrevation>

      this lists every "project" at that moment for that organisation

    * for every managed Org creates "<year>/<month>/updated_projects_<timestamp>.json" in /opt/dmponline_internal/<org.abbrevation>

      this lists every new "project" since the latest full dump (see above)

    * for every managed Org creates "<year>/<month>/projects_<timestamp>.json" in /opt/dmponline_internal/<org.abbrevation>

      this lists all deleted projects. Only id's are given.

  * ugent/bin/daily_cleanup_projects

    this makes that only a maximum of json export files per organisation are kept

    this maximum is 30 by default.

    this means that by default 30 full exports are kept

  only used for Sharepoint integration of UGent

  Deprecated, now that app is deployed with docker.
    cronjobs should be run differently

- config/initalizers/contact_us_local.rb

  local overrides for config/initializers/contact_us.rb

  the name of this file must come alphabetically after "contact_us.rb"

  as the initializers are loaded in that order.

- added .dockerignore for docker builds