@@ -25,12 +25,16 @@ RUN apt-get update && \
     rm -rf /usr/local/bundle/cache/ && \
     (bin/wkhtmltopdf || true) &&\
     rm -f vendor/bundle/ruby/3.0.0/gems/wkhtmltopdf-binary-0.12.6.6/bin/*.gz && \
-    mv ./ugent/public/* ./public
+    mv ./ugent/public/* ./public && \
+    mv bin/rails_without_spring bin/rails
 
-FROM --platform=$BUILDPLATFORM ruby:3.0.5
+FROM --platform=$BUILDPLATFORM ruby:3.0.5-slim
 
 COPY --from=build /opt/roadmap /opt/roadmap
 COPY --from=build /usr/local/bundle /usr/local/bundle
+
+RUN apt-get update && \
+  apt-get -y install libpq5 libmariadb3 libyaml-0-2 libxml2 openssl bison libjpeg62-turbo libpng16-16 imagemagick libxrender1 libxext6/stable
 
 # for testing purpose
 #CMD exec /bin/bash -c "trap : TERM INT; sleep infinity & wait"
